spring boot completed

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,6 @@
 <head>
     <title>Person Information Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
 <body>
 <br>
 <div class="container-center">
@@ -69,15 +68,12 @@
     </div>
 </div>
 <br>
-<div class="container">
-    <div class="col-lg-10 col-md-8 col-sm-6 container justify-content-center card">
-        <div class="card-body">
-            <form action="employee_portal/trainers" method="get">
-                <button type="submit" class="btn btn-success">EmployeeList</button>
-            </form>
-        </div>
-    </div>
+<div>
+    <form action="employee_portal/trainers" method="get">
+        <button type="submit" class="btn btn-success">EmployeeList</button>
+    </form>
 </div>
+
 <br>
 <div class="container">
     <div class="col-lg-10 col-md-8 col-sm-6 container justify-content-center card">
